Add back functionality on login error

--- a/app/src/main/res/layout/login_error.xml
+++ b/app/src/main/res/layout/login_error.xml
@@ -35,7 +35,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/signInButton"
+        android:id="@+id/tryAgainButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/btn_sign_in_attempt_text"
