Refactor to separate ui and viewmodel

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/walkthroughFragment"
-        android:name="com.oliveroneill.wilt.walkthrough.WalkthroughFragment"
+        android:name="com.oliveroneill.wilt.ui.WalkthroughFragment"
         android:label="WalkthroughFragment"
         tools:layout="@layout/walkthrough_fragment" >
         <action
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/loginErrorFragment"
-        android:name="com.oliveroneill.wilt.walkthrough.LoginErrorFragment"
+        android:name="com.oliveroneill.wilt.ui.LoginErrorFragment"
         android:label="LoginErrorFragment"
         tools:layout="@layout/login_error" />
 </navigation>
