--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="lightGray">#DADADA</color>
+    <color name="lightGray">#979797</color>
+    <color name="dividerGray">#D5D4D4</color>
     <color name="darkGray">#464646</color>
 </resources>
