Fix back button being able to return to login screen
This would be confusing because if the user opens the app they can
accidentally sign out.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,7 +15,8 @@
             app:destination="@id/loginErrorFragment" />
         <action
             android:id="@+id/action_login"
-            app:destination="@id/historyFragment" />
+            app:destination="@id/historyFragment"
+            app:popUpTo="@+id/nav_graph" />
     </fragment>
 
     <fragment
