Add bottom navigation bar
I've added a profile screen but this is a work in progress

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,7 +15,7 @@
             app:destination="@id/loginErrorFragment" />
         <action
             android:id="@+id/action_login"
-            app:destination="@id/historyFragment"
+            app:destination="@id/navigation_feed"
             app:popUpTo="@+id/nav_graph" />
     </fragment>
 
@@ -25,8 +25,12 @@
         android:label="Login Error"
         tools:layout="@layout/login_error" />
     <fragment
-        android:id="@+id/historyFragment"
+        android:id="@+id/navigation_feed"
         android:name="com.oliveroneill.wilt.ui.PlayHistoryFragment"
         android:label="Your Top Artists Per Week"
         tools:layout="@layout/history_screen" />
+    <fragment
+        android:id="@+id/navigation_profile"
+        android:name="com.oliveroneill.wilt.ui.ProfileFragment"
+        android:label="ProfileFragment" />
 </navigation>
