--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,7 +28,7 @@
         android:id="@+id/navigation_feed"
         android:name="com.oliveroneill.wilt.ui.PlayHistoryFragment"
         android:label="Your Top Artists Per Week"
-        tools:layout="@layout/history_screen" />
+        tools:layout="@layout/history_fragment" />
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.oliveroneill.wilt.ui.ProfileFragment"
