Add authentication check for feed
This is sort of ugly since you have to wrap everything in LoggedIn now.
But I couldn't figure out a better way for it to be any of the states
or logged out without complicating the view code.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,7 +28,11 @@
         android:id="@+id/navigation_feed"
         android:name="com.oliveroneill.wilt.ui.PlayHistoryFragment"
         android:label="Your Top Artists Per Week"
-        tools:layout="@layout/history_fragment" />
+        tools:layout="@layout/history_fragment" >
+        <action
+            android:id="@+id/action_logout"
+            app:destination="@id/walkthroughFragment" />
+    </fragment>
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.oliveroneill.wilt.ui.ProfileFragment"
